--- a/themes/apollo/sass/main.scss
+++ b/themes/apollo/sass/main.scss
@@ -13,6 +13,7 @@
 @import "parts/_publications.scss";
 @import "parts/_homepage.scss";
 @import "parts/_footnotes.scss";
+@import "parts/_lists.scss";
 
 :root {
   /* Used for: block comment, hr, ... */
@@ -37,13 +38,13 @@ html {
   line-height: var(--line-height);
 
   @media (max-width: 992px) {
-    font-size: calc(var(--font-size-base) * 0.97);
+    font-size: calc(var(--font-size-base) * 1.02);
   }
   @media (max-width: 768px) {
-      font-size: calc(var(--font-size-base) * 0.95);
+      font-size: calc(var(--font-size-base) * 1.05);
   }
   @media (max-width: 576px) {
-      font-size: calc(var(--font-size-base) * 0.92);
+      font-size: calc(var(--font-size-base) * 1.08);
   }
 }
 
