fix: normalize publications page margins with other pages
Remove extra top margin from publications list to maintain consistent spacing across all pages

--- a/themes/apollo/sass/parts/_publications.scss
+++ b/themes/apollo/sass/parts/_publications.scss
@@ -1,6 +1,6 @@
 // Publications styling using Apollo theme variables and SCSS features
 .publications-list {
-    margin-top: 2rem;
+    margin-top: 0;
 }
 
 // Section styling
