fix: lateral margins publication page

--- a/themes/apollo/sass/parts/_publications.scss
+++ b/themes/apollo/sass/parts/_publications.scss
@@ -1,6 +1,8 @@
 // Publications styling using Apollo theme variables and SCSS features
 .publications-list {
     margin-top: 0;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 // Section styling
